# LSCSimulation

./: CMakeLists.txt
GLG4Sim/: CMakeLists.txt
LSCSim/: CMakeLists.txt
LSCSim/LSCSim/: LSCDetectorConstruction.hh  LSCPMTSD.hh
LSCSim/mac/: default_prototype.mac
LSCSim/src/: LSCDetectorConstruction.cc  LSCDetectorConstruction_Prototype_AcrylicBall.cc  LSCMaterial.cc  LSCPMTOpticalModel.cc  LSCPMTSD.cc  LSCRootManager.cc
LSCSim/test/: different.cc  lscsim.cc
MCObjs/MCObjs/: MCEventInfo.hh  MCPMT.hh  MCPhotonHit.hh
MCObjs/src/: MCEventInfo.cc  MCPhotonHit.cc
TrgSim/test/: digi_example.C
